fix spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -208,6 +208,11 @@ body.dark-mode .site-footer {
     padding: $spacing-unit 0;
 }
 
+.page-content-index {
+    padding: $spacing-unit/2 0;
+}
+
+
 .page-heading {
     font-size: 20px;
 }
